Introduce IntegrationTests group in Junit so we can skip failing tests with -DexcludedGroups="nl.ipo.cds.categories.IntegrationTests"

--- a/attributemapping/pom.xml
+++ b/attributemapping/pom.xml
@@ -9,6 +9,10 @@
 	<name>CDS Inspire - Attributemapping</name>
 	<dependencies>
 		<dependency>
+			<groupId>nl.ipo.cds</groupId>
+			<artifactId>commons</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
 		</dependency>
