Fix maven release build by including junit at scope compile

--- a/cds-test/pom.xml
+++ b/cds-test/pom.xml
@@ -75,6 +75,10 @@
 	</build>
   <dependencies>
   	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+	</dependency>
+  	<dependency>
   		<groupId>nl.ipo.cds</groupId>
   		<artifactId>managerDB</artifactId>
   		<type>jar</type>
