--- a/etl-test/pom.xml
+++ b/etl-test/pom.xml
@@ -12,5 +12,9 @@
   		<groupId>nl.ipo.cds</groupId>
   		<artifactId>etl-proces</artifactId>
   	</dependency>
+  	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+	</dependency>
   </dependencies>
 </project>
