--- a/managerDB/pom.xml
+++ b/managerDB/pom.xml
@@ -247,6 +247,10 @@
 	</build>
 
 	<dependencies>
+	    <dependency>
+        	<groupId>nl.ipo.cds</groupId>
+        	<artifactId>commons</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
