add property for configurable SRS EPSG:28992, and change to isSurface ipv is Polygon for validation

--- a/resources/src/main/resources-acc/nl/ipo/cds/etl/etl.properties
+++ b/resources/src/main/resources-acc/nl/ipo/cds/etl/etl.properties
@@ -6,3 +6,5 @@ mail.smtpPort=2500
 mail.from=noreply@services.inspire-provincies.nl
 mail.host=www.inspire-provincies.nl
 bronhouderAreaMargin=1
+# Comma separated list of strings that are srsName in gml and should be transformed to EPSG:28992 RD_new
+vrn.rd_replacement_crs_list=_Netherlands-RD-New_0
