Add overlap tolerance fixes cds-vrn/cds-bij12#107

--- a/resources/src/main/resources-tst/nl/ipo/cds/etl/etl.properties
+++ b/resources/src/main/resources-tst/nl/ipo/cds/etl/etl.properties
@@ -6,5 +6,6 @@ mail.smtpPort=2500
 mail.from=noreply@services.inspire-provincies.nl
 mail.host=www.inspire-provincies.nl
 bronhouderAreaMargin=1
+overlapTolerance=0.001
 
 
